-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.1
-
674aa084c (dev), d808cd3ce (6.5), c63a3a46b (6.6)
Which leads to a warning (and error if warnings are errors):
Warning C4275 non dll-interface class 'QJsonValueConstRef' used as base for dll-interface class 'QJsonValueRef' UniRemoteAdapter C:\qt\Qt6.5.1\6.5.1\msvc2019_64\include\QtCore\qjsonvalue.h 219
| For Gerrit Dashboard: QTBUG-114629 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 485791,3 | Q*ValueRef: suppress MSVC warning on deriving from non-exported base | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 486024,2 | Q*ValueRef: suppress MSVC warning on deriving from non-exported base | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 486025,2 | Q*ValueRef: suppress MSVC warning on deriving from non-exported base | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |